syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy";
option java_outer_classname = "FretesRest";
option objc_class_prefix = "HLW";

package br.com.zup.academy;

service FreteService {

  rpc calculaFrete(CalculaFreteRequest) returns (CalculaFreteResponse) {}

  rpc retornaFretes(SemParametros) returns (ListaFreteResponse) {}
}

message CalculaFreteRequest {
  string cep = 1;
}

message CalculaFreteResponse {
  string cep = 1;
  double valor = 2;
}

message ErroDetails {
  int32 code = 1;
  string message = 2;
}

message ListaFreteResponse {
  repeated CalculaFreteResponse fretes = 1;
}

message SemParametros {}